force-app/main/default/objects/Funding_Action_Attachment__c/Funding_Action_Attachment__c.object-meta.xml
<CustomObject>
    <description>An attachments object to replace the standard attachments object in Salesforce, to allow for attachment types for Funding Actions</description>
    <label>Funding Action Attachment</label>
    <nameField>
        <label>Attachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Action Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>