force-app/main/default/objects/Funding_Action_Attachment__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Funding_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming WAS Email</fullName>
            </value>
            <value>
                <fullName>Work Authorization Document</fullName>
            </value>
            <value>
                <fullName>CPS Document</fullName>
            </value>
            <value>
                <fullName>ACT Agreement</fullName>
            </value>
            <value>
                <fullName>Invoice Document</fullName>
            </value>
            <value>
                <fullName>Determination and Findings</fullName>
            </value>
            <value>
                <fullName>Closeout Documentation</fullName>
            </value>
            <value>
                <fullName>Funding Document</fullName>
            </value>
            <value>
                <fullName>LDRD</fullName>
            </value>
            <value>
                <fullName>Impact Analysis</fullName>
            </value>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DOE&apos;s Acceptance</fullName>
            </value>
            <value>
                <fullName>Advance Documentation</fullName>
            </value>
            <value>
                <fullName>Property List</fullName>
            </value>
            <value>
                <fullName>Statement of Work</fullName>
            </value>
            <value>
                <fullName>Funding Document (Manually Signed)</fullName>
            </value>
            <value>
                <fullName>Work Authorization Attachments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>