force-app/main/default/objects/Funding_Action_Attachment__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <label>AttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>