force-app/main/default/objects/Funding_Action_Attachment__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + AttachmentId__c ,&quot;CLICK HERE TO VIEW&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Link</label>
    <type>Text</type>
</CustomField>