force-app/main/default/objects/Funding_Action_Attachment__c/fields/Funding_Action__c.field-meta.xml
<CustomField>
    <fullName>Funding_Action__c</fullName>
    <label>Funding Action</label>
    <referenceTo>Funding_Action__c</referenceTo>
    <relationshipLabel>Funding Action Attachments</relationshipLabel>
    <relationshipName>Funding_Action_Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>