force-app/main/default/objects/Funding_Action_Attachment__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT Funding Action</fullName>
            </value>
            <value>
                <fullName>SPP Funding Action</fullName>
            </value>
            <value>
                <fullName>DOE Direct Funding Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>