force-app/main/default/objects/Funding_Action_Attachment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ AttachmentId__c , &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>